syntax = "proto3";
package exomonad.effects.fs;

// Filesystem effects for file operations.

// ============================================================================
// ReadFile - Read file contents
// ============================================================================

message ReadFileRequest {
  // Absolute or relative file path.
  string path = 1;
  // Maximum bytes to read (0 = unlimited, default: 1MB).
  int64 max_bytes = 2;
  // Starting offset in bytes (for pagination).
  int64 offset = 3;
}

message ReadFileResponse {
  // File contents (UTF-8 encoded).
  string content = 1;
  // Number of bytes actually read.
  int64 bytes_read = 2;
  // True if content was truncated due to max_bytes.
  bool truncated = 3;
  // Total file size in bytes.
  int64 total_size = 4;
}

// ============================================================================
// WriteFile - Write file contents
// ============================================================================

message WriteFileRequest {
  // Absolute or relative file path.
  string path = 1;
  // Content to write (UTF-8 encoded).
  string content = 2;
  // Create parent directories if they don't exist.
  bool create_parents = 3;
  // Append to existing file instead of overwriting.
  bool append = 4;
}

message WriteFileResponse {
  // Number of bytes written.
  int64 bytes_written = 1;
  // Absolute path to the written file.
  string path = 2;
}

// ============================================================================
// FileExists - Check if file exists
// ============================================================================

message FileExistsRequest {
  string path = 1;
}

message FileExistsResponse {
  bool exists = 1;
  bool is_file = 2;
  bool is_directory = 3;
}

// ============================================================================
// ListDirectory - List directory contents
// ============================================================================

message ListDirectoryRequest {
  string path = 1;
  // Include hidden files (starting with .).
  bool include_hidden = 2;
  // Include file metadata.
  bool include_metadata = 3;
}

message FileEntry {
  string name = 1;
  bool is_directory = 2;
  // Size in bytes (0 for directories).
  int64 size = 3;
  // Last modified timestamp (Unix seconds).
  int64 modified_at = 4;
}

message ListDirectoryResponse {
  repeated FileEntry entries = 1;
  int32 count = 2;
}

// ============================================================================
// DeleteFile - Delete a file or directory
// ============================================================================

message DeleteFileRequest {
  string path = 1;
  // Recursively delete directories.
  bool recursive = 2;
}

message DeleteFileResponse {
  // True if file/directory was deleted.
  bool deleted = 1;
}

// ============================================================================
// Service definition
// ============================================================================

service FilesystemEffects {
  rpc ReadFile(ReadFileRequest) returns (ReadFileResponse);
  rpc WriteFile(WriteFileRequest) returns (WriteFileResponse);
  rpc FileExists(FileExistsRequest) returns (FileExistsResponse);
  rpc ListDirectory(ListDirectoryRequest) returns (ListDirectoryResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}
